--- a/Webclient/webClient.scss
+++ b/Webclient/webClient.scss
@@ -3,11 +3,11 @@ $defaultborderGrey: #A3A3A3;
 $defaultGrey: #f8f8f8;
 $default-min-width: 360px;
 
-//@font-face {
-  //font-family: 'TitleFont';
-  //src: url('baseComponents/fontstyle/test.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  //     url('baseComponents/fontstyle/test.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
-//}
+@font-face {
+  font-family: HelveticaNeueThin;
+  src: url('baseComponents/fontstyle/HelveticaNeueThin.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  url('baseComponents/fontstyle/HelveticaNeueThin.ttf') format('truetype') /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */;
+}
 
 @import 'scss/utils';
 
